# SWPraktikum

./: CMakeLists.txt  main.cpp
